--- a/css/style.css
+++ b/css/style.css
@@ -240,7 +240,13 @@ p {
 .main__section--projects li {
 	width: 300px;	
 	height: 300px;
-	background-color: lightgray;
+	border-radius: 12px;
+	margin: 20px;
+}
+
+.main__section--projects--img {
+	width: 300px;	
+	height: 300px;
 	border-radius: 12px;
 	margin: 20px;
 }
@@ -394,7 +400,7 @@ p {
 		padding-left: 0px;
 	}
 
-	.main__section--projects li {
+	.main__section--projects--img {
 		width: 250px;
 		height: 250px;
 		flex-grow: 1;
